// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskForm should render correctly 1`] = `
<li>
  <TaskTitleInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="A title"
  />
  <TaskDescriptionInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="A description"
  />
  <TaskSubmitButton
    onClick={[Function]}
  />
  <TaskDeleteButton
    onClick={[Function]}
  />
</li>
`;

exports[`TaskForm should update description 1`] = `
<li>
  <TaskTitleInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="A title"
  />
  <TaskDescriptionInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="Updated description"
  />
  <TaskSubmitButton
    onClick={[Function]}
  />
  <TaskDeleteButton
    onClick={[Function]}
  />
</li>
`;

exports[`TaskForm should update title 1`] = `
<li>
  <TaskTitleInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="Updated title"
  />
  <TaskDescriptionInput
    handleChange={[Function]}
    handleSubmit={[Function]}
    value="A description"
  />
  <TaskSubmitButton
    onClick={[Function]}
  />
  <TaskDeleteButton
    onClick={[Function]}
  />
</li>
`;
